Build webpack bundler

--- a/back-office/src/index.html
+++ b/back-office/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="AK Naturophaty and Pharmacy Patient Registration System" />
     <meta name="author" content="Mbakop Ngongang Morlo" />
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" async></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" async></script> -->
 
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="Content/angular-material.min.css" rel="stylesheet" />
@@ -17,9 +17,8 @@
     <link href="App/Styles/app-style.min.css" rel="stylesheet" /> -->
 </head>
 
-<body ng-app="ak-clinic-users"
-      layout="row"
-      ng-controller="MainController as mainCtrl">
+<body ng-app="app"
+      layout="row">
 
     <!-- <div class="loader">
         <img src="App/Images/loader-green.gif" />
