--- a/back-office/src/index.html
+++ b/back-office/src/index.html
@@ -37,7 +37,6 @@
     </script> -->
     <!--<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"> </script>-->
 
-
-</body>
+ <script type="text/javascript" src="bundle.js?ef148a2b1cd20fc778a1"></script></body>
 
 </html>
